tests/content-scanning/page-analysis/snapshot.txt
*-----------------------------------------------*
|    WARNING: THIS IS A DEBUG BUILD OF ZINE     |
|-----------------------------------------------|
| Debug builds enable expensive sanity checks   |
| that reduce performance.                      |
|                                               |
| To create a release build, run:               |
|                                               |
|           zig build --release=fast            |
|                                               |
| If you're investigating a bug in Zine, then a |
| debug build might turn confusing behavior     |
| into a crash.                                 |
|                                               |
| To disable all forms of concurrency, you can  |
| add the following flag to your build command: |
|                                               |
|              -Dsingle-threaded                |
|                                               |
*-----------------------------------------------*

content/code.smd:18:3: [erroneous_end_tag] 
|    </span> wrong!
|      ^^^^

content/parse.smd:10:1: [html_is_forbidden] 
|    <div>wrong block-level html</div>
|    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

content/parse.smd:12:1: [scripty] unexpected token
|    []($link.page(/other))  //wrong
|    ^^^^^^^^^^^^^^^^^^^^^^

content/parse.smd:13:1: [scripty] unexpected token
|    []($link.page('/other))  //wrong
|    ^^^^^^^^^^^^^^^^^^^^^^^

content/parse.smd:16:1: [scripty] path must be relative
|    []($link.page('/other'))  //wrong
|    ^^^^^^^^^^^^^^^^^^^^^^^^

content/parse.smd:19:1: [scripty] '.' and '..' are not allowed in paths
|    []($link.page('./other')) //wrong
|    ^^^^^^^^^^^^^^^^^^^^^^^^^

content/parse.smd:22:1: [scripty] empty component in path
|    []($link.page('foo//bar')) //wrong 1/9
|    ^^^^^^^^^^^^^^^^^^^^^^^^^^

content/parse.smd:24:1: [scripty] '.' and '..' are not allowed in paths
|    []($link.page('foo/./bar')) //wrong 2/9
|    ^^^^^^^^^^^^^^^^^^^^^^^^^^^

content/parse.smd:26:1: [scripty] '.' and '..' are not allowed in paths
|    []($link.page('foo/../bar')) //wrong 3/9
|    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

content/parse.smd:28:1: [scripty] '.' and '..' are not allowed in paths
|    []($link.page('foo/.')) //wrong 4/9
|    ^^^^^^^^^^^^^^^^^^^^^^^

content/parse.smd:30:1: [scripty] '.' and '..' are not allowed in paths
|    []($link.page('foo/..')) //wrong 5/9
|    ^^^^^^^^^^^^^^^^^^^^^^^^

content/parse.smd:32:1: [scripty] empty component in path
|    []($link.page('a//foo/./bar')) //wrong 6/9
|    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

content/parse.smd:34:1: [scripty] empty component in path
|    []($link.page('a//foo/../bar')) //wrong 7/9
|    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

content/parse.smd:36:1: [scripty] empty component in path
|    []($link.page('a//foo/.')) //wrong 8/9
|    ^^^^^^^^^^^^^^^^^^^^^^^^^^

content/parse.smd:38:1: [scripty] empty component in path
|    []($link.page('a//foo/..')) //wrong 9/9
|    ^^^^^^^^^^^^^^^^^^^^^^^^^^^

content/index.smd:18:1: error: missing site asset
|    []($image.siteAsset('doesntexist.jpg')) //wrong
|    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

content/index.smd:24:1: error: unknown alternative
|    []($link.alternative('doesntexist-alternative')) //wrong
|    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

content/index.smd:36:1: error: unknown page
|    []($link.page('doesntexist')) //wrong
|    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

content/index.smd:39:1: error: unknown alternative
|    []($link.page('other').alternative('doesntexist')) // wrong
|    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

content/index.smd:42:1: error: missing site asset
|    ![](/bad.jpg) //wrong
|    ^^^^^^^^^^^^^

content/index.smd:43:1: error: missing site asset
|    ![](./bad.jpg) //wrong
|    ^^^^^^^^^^^^^^

content/index.smd:44:1: error: missing site asset
|    ![](bad.jpg) // wrong
|    ^^^^^^^^^^^^

content/other.smd:20:1: error: unknown language code
|    ```zig++ wrong
|    ^^^^^^^^^^^^^^^

content/other.smd:23:1: error: unknown language code
|    [](<$code.siteAsset('code.zig').language('zig++')>) //wrong
|    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

----------------------------
       -- VARIANT --
----------------------------
.id = 0,
.content_dir_path = content

  ------- SECTION -------
.index = 1,
.section_path = content/,
.pages = [
    content/parse.smd
    content/other.smd
    content/code.smd
],

skater.webp (0)


 ----- EXIT CODE: 1 -----
